<resources>
    <string name="app_name">sd-courier</string>
    <string name="user_name">userName</string>
    <string name="user_email">userEmail</string>
    <string name="auth_token">authToken</string>
    <string name="gcm_token">gcmToken</string>
    <string name="utc_offset">utcOffset</string>
    <string name="title_new_orders">Заказы</string>
    <string name="title_my_orders">Мои заказы</string>
    <string name="title_profile">Профиль</string>
    <string name="title_orders_history">История заказов</string>
    <string name="title_login">Логин</string>
    <string name="title_settings">Настройки</string>
</resources>
